--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -6,7 +6,7 @@
      You may obtain a copy of the License at
 
           http://www.apache.org/licenses/LICENSE-2.0
-
+"res/values/strings.xml"
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -26,10 +26,11 @@
         android:layout_weight="1"
     />
     <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/quicklist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:prompt="@string/quicklist_prompt"
     />
     <LinearLayout
         android:orientation="horizontal"
